# BuildYourCity

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh
Common/: CMakeLists.txt  CommonTest.cpp  CommonTestSub.cpp
Common/include/: BaseManager.h  BaseModule.h  Constants.h  FastDDSPubListener.h  FastDDSPubWrapper.h  FastDDSSubListener.h  FastDDSSubWrapper.h  IFastDDSPubWrapper.h  IFastDDSSubWrapper.h
Common/src/: FastDDSPubListener.cpp  FastDDSPubWrapper.cpp  FastDDSSubListener.cpp
FastDDSMessages/: CMakeLists.txt
FastDDSMessages/idl/: CommonMessage.idl  InitializeMessage.idl  ResidentialModule.idl  Test.idl  TestTwo.idl  TickMessage.idl
GUI/: CMakeLists.txt
GUI/BuildYourCityGodot/: icon.svg.import  project.godot
GUI/BuildYourCityGodot/MainMenu/Scenes/: MainMenu.tscn
GUI/BuildYourCityGodot/MapView/Assets/: CCity_mockup.png.import
GUI/BuildYourCityGodot/MapView/Scenes/: map_view.gd  map_view.tscn
GUI/GDExtension/: Makefile
GUI/GDExtension/gdextension/: gdextension_interface.h
GUI/GDExtension/include/godot_cpp/: godot.hpp
GUI/GDExtension/include/godot_cpp/classes/: editor_plugin_registration.hpp  ref.hpp  wrapped.hpp
GUI/GDExtension/include/godot_cpp/core/: binder_common.hpp  builtin_ptrcall.hpp  class_db.hpp  defs.hpp  engine_ptrcall.hpp  error_macros.hpp  math.hpp  memory.hpp  method_bind.hpp  method_ptrcall.hpp  mutex_lock.hpp  object.hpp  object_id.hpp  property_info.hpp  type_info.hpp
GUI/GDExtension/include/godot_cpp/templates/: cowdata.hpp  hash_map.hpp  hash_set.hpp  hashfuncs.hpp  list.hpp  local_vector.hpp  pair.hpp  rb_map.hpp  rb_set.hpp  rid_owner.hpp  safe_refcount.hpp  search_array.hpp  self_list.hpp  sort_array.hpp  spin_lock.hpp  thread_work_pool.hpp  vector.hpp  vmap.hpp  vset.hpp
GUI/GDExtension/include/godot_cpp/variant/: aabb.hpp  array_helpers.hpp  basis.hpp  callable_custom.hpp  callable_method_pointer.hpp  char_string.hpp  char_utils.hpp  color.hpp  color_names.inc.hpp  plane.hpp  projection.hpp  quaternion.hpp  rect2.hpp  rect2i.hpp  transform2d.hpp  transform3d.hpp  typed_array.hpp  variant.hpp  vector2.hpp  vector2i.hpp  vector3.hpp  vector3i.hpp  vector4.hpp  vector4i.hpp
GUI/GDExtension/src/: godot.cpp
GUI/GDExtension/src/classes/: editor_plugin_registration.cpp  low_level.cpp  wrapped.cpp
GUI/GDExtension/src/core/: class_db.cpp  error_macros.cpp  memory.cpp  method_bind.cpp  object.cpp
GUI/GDExtension/src/variant/: aabb.cpp  basis.cpp  callable_custom.cpp  callable_method_pointer.cpp  char_string.cpp  color.cpp  packed_arrays.cpp  plane.cpp  projection.cpp  quaternion.cpp  rect2.cpp  rect2i.cpp  transform2d.cpp  transform3d.cpp  variant.cpp  vector2.cpp  vector2i.cpp  vector3.cpp  vector3i.cpp  vector4.cpp  vector4i.cpp
GUI/GDExtension/test/src/: example.cpp  example.h  register_types.cpp  register_types.h
GUI/GUICode/: CMakeLists.txt
GUI/GUICode/include/: GodotDDSWrapper.h  RegisterTypes.h
GUI/GUICode/src/: GodotDDSWrapper.cpp  RegisterTypes.cpp
GUI/godotproject/MainMenu/Assets/: MainMenu.jpg.import  MainMenuLogo.png.import
GUI/godotproject/MainMenu/Scenes/: MainMenu.gd
GUI/godotproject/MapView/Assets/: TEST-SmallCar-Sheet.png.import
GUI/godotproject/MapView/Scenes/: BuildingWindow.gd  map_view.gd
Managers/: CMakeLists.txt
Managers/ResidentialManager/: CMakeLists.txt  ResidentialManagerMain.cpp
Managers/ResidentialManager/include/: ResidentialManager.h
Managers/ResidentialManager/src/: ResidentialManager.cpp
Managers/SimulationManager/: CMakeLists.txt  SimulationManagerMain.cpp
Managers/SimulationManager/include/: SimulationManager.h
Managers/SimulationManager/src/: SimulationManager.cpp
Modules/: CMakeLists.txt
Modules/Residential/: CMakeLists.txt
Modules/Residential/include/: SingleFamilyHome.h
Modules/Residential/src/: SingleFamilyHome.cpp
Test/UnitTest/Common/: CMakeLists.txt  CommonUnitTest.cpp  FastDDSMocks.h
